provisioning/roles/ingress/files/nginx.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: tds-cloud
  labels:
    tds-app: nginx
    scope: testing
spec:
  selector:
    tds-app: nginx
    scope: testing
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    tds-app: nginx
    scope: testing
  name: nginx
  namespace: tds-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      tds-app: nginx
      scope: testing
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        tds-app: nginx
        scope: testing
      name: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        securityContext:
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
